data/derived/comb/progs/unify/prog3645.ml.out
Characters 115-127:
  else if List.length l1 < List.length l2 then ([0]@l1, l2);;
                                               ^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
